# jawnscanner

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  osv-scanner.toml  prometheus.yml  renovate.json
.cargo/: audit.toml
.github/workflows/: ci.yml  supply-chain.yml
grafana/: dashboard.json
src/: main.rs
