[package]
name = "jawnscanner"
version = "0.1.0"
edition = "2021"
description = "Prometheus exporter for PHL airport TSA checkpoint wait times"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
prometheus = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.8", features = ["tokio"] }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
